# awg-meshconf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  pyproject.toml  pytest.ini
awg_meshconf/: __init__.py  __main__.py  awg_meshconf.py  database_manager.py  wireguard.py
tests/: __init__.py  conftest.py  test_database_manager.py  test_init.py  test_integration.py  test_wireguard.py
