[project]
name = "awg-meshconf"
description = "A tool that helps you to generate peer configuration files for WireGuard mesh networks"
authors = [{ name = "K4YT3X", email = "i@k4yt3x.com" }, { name = "SamuraJ" }]
dependencies = ["cryptography>=35.0.0", "rich>=12.0.0", "ruff>=0.12.11,<0.13"]
requires-python = ">=3.12, <4"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/k4yt3x/awg-meshconf"

[project.scripts]
awg-meshconf = "awg_meshconf:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pdm]
version = { from = "awg_meshconf/__init__.py" }

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
